<resources>
    <string name="app_name">WALK HOLIC</string>
    <string name="walk_holic">Walk\nHolic</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="policy">약관 및 정책</string>
    <string name="email">이메일 문의</string>
    <string name="act_home">홈</string>
    <string name="act_park">공원</string>
    <string name="act_walk">산책로</string>
    <string name="act_walking">산책로생성</string>
    <string name="act_walk_list">산책로리스트</string>
    <string name="act_park_search">장소를 검색해보세요</string>
    <string name="login_desc">당신에게 맞는\n산책로와 공원을 찾아보세요</string>
    <string name="walkHolic_logo">WalkHolic</string>

</resources>