<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        tools:context=".MainActivity">

        <FrameLayout
            android:id="@+id/frame_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="341dp">


            <LinearLayout
                android:id="@+id/linearLayoutTmap_walking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/recordButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5E8FF"
                    android:text="기록 완료"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/drawTrailButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5E8FF"
                    android:text="터치로 경로 그리기"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5E8FF"
                    android:text="그려진 경로 지우기"
                    android:visibility="gone" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="선으로 그리기 / 길찾기 이용하기 (현재 선 이용)"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/drawBackButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5E8FF"
                    android:text="되돌리기"
                    android:visibility="gone" />


            </LinearLayout>

        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15sp"
            android:layout_marginBottom="230dp"
            android:src="@drawable/home1"
            android:visibility="invisible"
            app:backgroundTint="#ffffff"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp" />

        <TextView
            android:id="@+id/fab3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="70sp"
            android:layout_marginBottom="250dp"
            android:background="@drawable/round_layout"
            android:text="  기록 시작  "
            android:textAlignment="textEnd"
            android:textColor="@color/purple_200"
            android:textSize="18sp"

            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15sp"
            android:layout_marginBottom="160dp"
            android:src="@drawable/home1"
            android:visibility="invisible"
            app:backgroundTint="#ffffff"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp" />

        <TextView
            android:id="@+id/fab2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="70sp"
            android:layout_marginBottom="180dp"
            android:background="@drawable/round_layout"
            android:text="  터치로 그리기  "
            android:textAlignment="textEnd"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15sp"
            android:layout_marginBottom="90dp"
            android:src="@drawable/home"
            android:visibility="invisible"
            app:backgroundTint="#ffffff"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp" />

        <TextView
            android:id="@+id/fab1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="70sp"
            android:layout_marginBottom="110dp"
            android:background="@drawable/round_layout"
            android:text="  그려진 경로 지우기  "
            android:textAlignment="textEnd"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:visibility="gone" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="15sp"
            android:backgroundTint="#C49BE1"
            android:src="@drawable/list2"
            app:rippleColor="#593535"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/act_home"
            android:contentDescription="@string/act_home"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_park"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/act_park"
            android:contentDescription="@string/act_park"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/act_walk"
            android:contentDescription="@string/act_walk"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/act_walking"
            android:contentDescription="@string/act_walking"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_walk_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/act_walk_list"
            android:contentDescription="@string/act_walk_list"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</LinearLayout>
